infra/k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phlo-test-client
spec:
  selector:
    app: phlo-test-client
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
