infra/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phlo-test-server
spec:
  selector:
    app: phlo-test-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
